@@ -38,6 +38,11 @@
    - deraadt@cvs.openbsd.org 2001/06/23 00:16:16
      [scp.c]
      slightly better care
+   - markus@cvs.openbsd.org 2001/06/23 00:20:57
+     [auth2.c auth.c auth.h auth-rh-rsa.c]
+     *known_hosts2 is obsolete for hostbased authentication and
+     only used for backward compat. merge ssh1/2 hostkey check
+     and move it to auth.c
 
 20010622
  - (stevesk) handle systems without pw_expire and pw_change.
